test-aws/aws_configs/ap-southeast-2/NetworkAcls.json
{
 "NetworkAcls": [
  {
   "Associations": [
    {
     "NetworkAclAssociationId": "aclassoc-4b08dd2f",
     "NetworkAclId": "acl-7185e014",
     "SubnetId": "subnet-a71c69c2"
    },
    {
     "NetworkAclAssociationId": "aclassoc-2b53204f",
     "NetworkAclId": "acl-7185e014",
     "SubnetId": "subnet-dcf0ac9a"
    },
    {
     "NetworkAclAssociationId": "aclassoc-5408dd30",
     "NetworkAclId": "acl-7185e014",
     "SubnetId": "subnet-4816853f"
    }
   ],
   "Entries": [
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": true,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "allow",
     "RuleNumber": 100
    },
    {
     "CidrBlock": "0.0.0.0/0",
     "Egress": false,
     "Protocol": "-1",
     "RuleAction": "deny",
     "RuleNumber": 32767
    }
   ],
   "IsDefault": true,
   "NetworkAclId": "acl-7185e014",
   "OwnerId": "118292266645",
   "Tags": [],
   "VpcId": "vpc-9b35bafe"
  }
 ]
}
